Bug #36072
ceph fuse client can't write data and reporting waiting for caps need Fw want Fb
0%
Description
Version: jewel(10.2.2)
MDS mode: hot standby
Describe:
The client will not be able to continue writing data if MDS doesn't handle MClientReconnect message correctly during RECONNECT phase.
According client log "waiting for caps need Fw want Fb ..." we can know that client can't acquire Fw.After study mds log i found that
the file's wanted cap is null,so the client will waiting all the time which will lead our application can't complete.
Reproduce:
1.one fuse client mounted on /mnt/ivan/ and the mds.xt1 is active
2.open the file /mnt/ivan/test_waiting and write some data
3.kill the session of the client
4.restart mds daemon
5.write data continually when mds become active again
you will found your write op can't return and will hang all the time.
History
#1 Updated by Ivan Guan 5 months ago
this pr https://github.com/ceph/ceph/pull/24164 can resolve this problem.
#2 Updated by Casey Bodley 5 months ago
- Project changed from rgw to fs